fix - nowrap

--- a/src/css/11_modal_buy.css
+++ b/src/css/11_modal_buy.css
@@ -143,7 +143,6 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 32px;
-
   gap: 8px 16px;
 }
 
@@ -151,6 +150,14 @@
 @media only screen and (min-width: 768px) {
   .buy-card {
     margin-bottom: 40px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .buy-card {
+    /* gap: unset; */
+    justify-content: space-between;
+    flex-wrap: nowrap;
   }
 }
 
